--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,9 @@
       <%= link_to "edit profile", edit_user_registration_path(@user), class: "col-3 btn btn-sm btn-danger" %><br><br />
     <% end %>
   </div>
+
   <br class="clr" />
+
   <div class="userbody_left">
     <div class="userposts commentbox">
       <h3 class="text-center">recent posts</h3>
@@ -33,12 +35,14 @@
     </div>
     <br>
 
-
-    <div class="userpics commentbox">
+<%#    <div class="userpics commentbox">
       <h3 class="text-center">image gallery</h3>
       <hr class="line">
 
+
     </div>
+
+%>
   </div>
 
   <br class="clr" />
@@ -48,14 +52,15 @@
     <div class="usereggs commentbox">
       <h3 class="text-center">my eggs</h3>
       <hr class="line">
-
     </div>
+
     <br>
+
     <div class="userdragons commentbox">
       <h3 class="text-center">my dragons</h3>
       <hr class="line">
-
     </div>
   </div>
+
   <br class="clr" />
 </div>
